# glance

./: Cargo.toml  README.md  config.example.toml  waybar-module.jsonc
examples/: test_drag.py
src/: config.rs  copy.rs  drag.rs  init.rs  main.rs  menu.rs  scroll.rs  state.rs  status.rs  util.rs  watch.rs
