[package]
name = "wayglance"
version = "0.3.0"
edition = "2021"
description = "A file clipboard for Wayland — watches directories for new files and shows a transient Waybar widget with drag-and-drop, open, edit, and copy actions"
license = "MIT"
repository = "https://github.com/areofyl/glance"
homepage = "https://github.com/areofyl/glance"
keywords = ["wayland", "waybar", "clipboard", "screenshot", "hyprland"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "glance"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
gtk4 = "0.10"
gtk4-layer-shell = "0.7"
inotify = "0.11"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
